--- a/src/App.css
+++ b/src/App.css
@@ -40,3 +40,13 @@
 iframe{
   margin: 0 auto;
 }
+#list1 .form-control {
+    border-color: transparent;
+  }
+  #list1 .form-control:focus {
+    border-color: transparent;
+    box-shadow: none;
+  }
+  #list1 .select-input.form-control[readonly]:not([disabled]) {
+    background-color: #fbfbfb;
+  }
