--- a/src/components/CreateTodoButton/CreateTodoButton.css
+++ b/src/components/CreateTodoButton/CreateTodoButton.css
@@ -1,25 +1,26 @@
 .CreateTodoButton {
-    background-color: #61dafa;
-    box-shadow: 0 5px 25px rgba(97, 218, 250, .5);
-    border: none;
-    border-radius: 50%;
-    cursor: pointer;
-    font-size: 50px;
-    position: fixed;
-    bottom: 24px;
-    right: 24px;
-    font-weight: 700;
-    color: #fafafa;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 64px;
-    width: 64px;
+    background-color: #61DAFA !important;
+    box-shadow: 0px 5px 25px rgba(97, 218, 250, 0.5) !important;
+    border: none !important;
+    border-radius: 50% !important;
+    cursor: pointer !important;
+    font-size: 50px !important;
+    position: fixed !important;
+    bottom: 24px !important;
+    right: 24px !important;
+    font-weight: bold !important;
+    color: #FAFAFA !important;
+    display: flex !important;
+    justify-content: center !important;
+    align-items: center !important;
+    height: 64px !important;
+    width: 64px !important;
+  
     transform: rotate(0);
     transition: .3s ease;
-    z-index: 1;
-}
-
-.CreateTodoButton:hover {
-    transform: rotate(224deg)
-}
+  }
+  
+  .CreateTodoButton:hover {
+    transform: rotate(224deg) !important;
+  }
+  
